# diary_app_rust

./: .gitignore  Cargo.toml  Dockerfile.build.ubuntu16.04  Dockerfile.build.ubuntu18.04  Makefile  README.md
.github/workflows/: rust.yml
diary_app_api/: Cargo.toml
diary_app_api/src/: app.rs  elements.rs  errors.rs  lib.rs  logged_user.rs  requests.rs  routes.rs
diary_app_bot/: Cargo.toml
diary_app_bot/src/: failure_count.rs  lib.rs  telegram_bot.rs
diary_app_lib/: Cargo.toml
diary_app_lib/src/: config.rs  date_time_wrapper.rs  diary_app_interface.rs  diary_app_opts.rs  lib.rs  local_interface.rs  models.rs  naivedate_wrapper.rs  pgpool.rs  s3_instance.rs  s3_interface.rs  ssh_instance.rs  stack_string.rs
gdrive_lib/: Cargo.toml
gdrive_lib/src/: directory_info.rs  drive_v3_types.rs  gcs_instance.rs  gdrive_instance.rs  lib.rs  storage_v1_types.rs
gstorage_lib/: Cargo.toml
migrations/: V02__diary_cache.sql  V03__authorized_users.sql  V04__diary_conflict.sql  V05__diary_conflict_sequence.sql
migrations/2019-08-27-223105_diary_entries/: down.sql  up.sql
migrations/2019-08-27-223111_diary_cache/: down.sql  up.sql
migrations/2019-08-27-223123_authorized_users/: up.sql
migrations/2019-10-15-214227_diary_conflict/: down.sql  up.sql
scripts/: Dockerfile  backup_db.sh  bootstrap_db.sh  build_deb_docker.sh  clear_db.sh  openapi.yaml  restore_db.sh
src/: config.rs  diary_app_api.rs  diary_app_interface.rs  diary_app_opts.rs  diary_app_rust.rs  import_gdrive_diary_elog.rs  lib.rs  local_interface.rs  main.rs  models.rs  pgpool.rs  s3_instance.rs  s3_interface.rs  schema.rs  ssh_instance.rs  telegram_bot.rs
templates/: display_template.html  editor_template.html  index.html  index.html.hbr  list_template.html  main.css  scripts.js  search_template.html  style.css  sync_template.html
