[package]
name = "diary_app_rust"
version = "0.7.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "diary-app-rust"
priority = "optional"
section = "rust"
provides = "diary-app-rust"
extended-description = """\
Daily journal"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diary_app_lib = {path="diary_app_lib"}
diary_app_api = {path="diary_app_api"}
diary_app_bot = {path="diary_app_bot"}
env_logger = "0.8"
tokio = {version="1.6", features=["full"]}
dirs = "3.0"
anyhow = "1.0"
chrono = "0.4"

[workspace]
members = [
    "diary_app_lib",
    "diary_app_api",
    "diary_app_bot",
]

[[bin]]
name = "diary-app-rust"
path = "src/diary_app_rust.rs"
doc = false

[[bin]]
name = "diary-app-bot"
path = "src/telegram_bot.rs"
doc = false

[[bin]]
name = "diary-app-api"
path = "src/diary_app_api.rs"
doc = false

[[bin]]
name = "import-gdrive-diary-elog"
path = "src/import_gdrive_diary_elog.rs"
doc = false
