[package]
name = "diary_app_rust"
version = "0.10.12"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "diary-app-rust"
priority = "optional"
section = "rust"
provides = "diary-app-rust"
extended-description = """\
Daily journal"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
diary_app_lib = {path="diary_app_lib"}
diary_app_api = {path="diary_app_api"}
diary_app_bot = {path="diary_app_bot"}
dirs = "5.0"
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.40", features=["rt", "macros", "rt-multi-thread"]}

[workspace]
members = [
    "diary_app_lib",
    "diary_app_api",
    "diary_app_bot",
]

[[bin]]
name = "diary-app-rust"
path = "src/diary_app_rust.rs"
doc = false

[[bin]]
name = "diary-app-bot"
path = "src/telegram_bot.rs"
doc = false

[[bin]]
name = "diary-app-api"
path = "src/diary_app_api.rs"
doc = false

[[bin]]
name = "import-gdrive-diary-elog"
path = "src/import_gdrive_diary_elog.rs"
doc = false
