[package]
name = "diary_app_api"
version = "0.11.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.1"}
aws-config = {version="1.1", features=["behavior-version-latest"]}
diary_app_lib = {path = "../diary_app_lib"}
dioxus = "0.5"
dioxus-core = "0.5"
dioxus-ssr = "0.5"
derive_more = {version="1.0", features = ["full"]}
futures = "0.3"
handlebars = "6.1"
itertools = "0.13"
log = "0.4"
maplit = "1.0"
notify = "7.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="1.0.2" }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.40", features=["time"]}
uuid = "1.0"

[dev-dependencies]
auth_server_http = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.1"}
auth_server_lib = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.1"}
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls", "stream"], default-features = false}