[package]
name = "diary_app_api"
version = "0.12.5"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.9"}
aws-config = {version="1.8", features=["behavior-version-latest"]}
axum = { version = "0.8", features = ["multipart"] }
axum-extra = {version="0.12", features=["cookie"]}
diary_app_lib = {path = "../diary_app_lib"}
dioxus = "0.7"
dioxus-core = "0.7"
dioxus-signals = "0.7"
dioxus-ssr = "0.7"
derive_more = {version="2.1", features = ["full"]}
futures = "0.3"
handlebars = "6.4"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
mime = "0.3"
notify = "8.2"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.9", features=["deadpool"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml_ng = "0.10"
stack-string = { version="1.1", features=["postgres_types", "utoipa_types", "axum_types"] }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.52", features=["time"]}
tower-http = {version="0.6", features=["cors"]}
utoipa = { version = "5.5", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
utoipa-helper = "0.1"
utoipa-axum = { version = "0.2" }
uuid = "1.23"

[dev-dependencies]
auth_server_http = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.9"}
auth_server_lib = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.9"}
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
reqwest = {version="0.13", features=["cookies", "json", "stream"]}