[package]
name = "diary_app_bot"
version = "0.7.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diary_app_lib = {path="../diary_app_lib"}
log = "0.4"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.11"
crossbeam-utils = "0.8"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = {version="1.6", features=["full"]}
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-2"}
stack-string = { version="0.2", features=["diesel_types", "rweb-openapi"] }
