[package]
name = "diary_app_bot"
version = "0.12.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.5", features=["behavior-version-latest"]}
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
diary_app_lib = {path="../diary_app_lib"}
futures = "0.3"
itertools = "0.14"
log = "0.4"
once_cell = "1.0"
parking_lot = "0.12"
stack-string = { version="1.1", features=["postgres_types"] }
thiserror = "2.0"
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default-features=false}
