[package]
name = "diary_app_lib"
version = "0.8.20"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = {version = "0.48", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.48", default_features = false, features=["rustls"]}
sts_profile_auth = "0.7"
s3-ext = "0.5"
rand = "0.8"
log = "0.4"
url = "2.2"
dotenv = "0.15"
futures = "0.3"
rayon = "1.5"
jwalk = "0.6"
structopt = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
crossbeam-utils = "0.8"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = {version = "1.4", default_features = false}
difference = "2.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "4.0"
tokio = {version="1.17", features=["full"]}
derive_more = "0.99"
envy = "0.4"
smallvec = "1.6"
deadqueue = "0.2"
uuid = "1.0"
itertools = "0.10"
bytes = "1.1"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="1.0", features=["system"]}
refinery = {version="0.8", features=["tokio-postgres"]}
deadpool = { version = "0.9", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.10", features=["serde"] }
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
postgres-types = "0.2"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}

stack-string = { version="0.7", features=["postgres_types"] }
stdout-channel = "0.5"

[dev-dependencies]
tempdir = "0.3"
