[package]
name = "diary_app_lib"
version = "0.11.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
aws-config = {version="1.1", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.19"
bytes = "1.1"
clap = {version="4.0", features=["derive"]}
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
deadqueue = "0.2"
deadpool = { version = "0.12", features=["serde", "rt_tokio_1"] }
deadpool-postgres = { version = "0.14", features=["serde"] }
derive_more = {version="1.0", features = ["full"]}
difference = "2.0"
dirs = "5.0"
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
jwalk = "0.8"
log = "0.4"
once_cell = "1.0"
parking_lot = "0.12"
postgres-types = "0.2"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rand = "0.8"
rayon = "1.5"
refinery = {version="0.8", features=["tokio-postgres"]}
regex = {version = "1.4", default-features = false}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
stdout-channel = "0.6"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.41", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
url = "2.3"
uuid = "1.0"

[dev-dependencies]
tempdir = "0.3"
