[package]
name = "gdrive_lib"
version = "0.7.7"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-rustls = "0.22"
hyper = { version = "0.14", features = ["stream"] }
parking_lot = "0.11"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
percent-encoding = "2.1"
url = "2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
retry = "1.2"
chrono = "0.4"
rayon = "1.5"
anyhow = "1.0"
itertools = "0.10"
rand = "0.8"
futures = "0.3"
mime = "0.3"
crossbeam = "0.8"
deadqueue = "0.2"
env_logger = "0.8"
async-google-apis-common = "0.3"
tokio = {version="1.0", features=["full"]}
stack-string = { version="0.2", features=["diesel_types"] }
